--- a/手写方法.md
+++ b/手写方法.md
@@ -1,4 +1,24 @@
-[toc]
+- [继承](#继承)
+  - [原型链继承](#原型链继承)
+  - [构造函数继承](#构造函数继承)
+  - [组合式继承（子类型的函数中调用超类型的构造函数来实现）](#组合式继承子类型的函数中调用超类型的构造函数来实现)
+  - [寄生式继承](#寄生式继承)
+  - [ES6 class继承](#es6-class继承)
+- [模块化](#模块化)
+- [Promise](#promise)
+- [手写 call、apply 及 bind 函数](#手写-callapply-及-bind-函数)
+  - [call](#call)
+  - [apply](#apply)
+  - [bind](#bind)
+- [new](#new)
+- [instanceof](#instanceof)
+- [JSONP](#jsonp)
+- [数组扁平化 - 模拟 `Array.prototype.flat`](#数组扁平化---模拟-arrayprototypeflat)
+  - [迭代版本](#迭代版本)
+- [近似计算一个对象在js占用内存](#近似计算一个对象在js占用内存)
+- [手写模仿ajax，在一定时间后执行异步](#手写模仿ajax在一定时间后执行异步)
+- [建立XHR链接](#建立xhr链接)
+- [闭包打印for循环 - 自调用函数， let](#闭包打印for循环---自调用函数-let)
 
 ### 继承
 
