--- a/算法/算法.md
+++ b/算法/算法.md
@@ -60,6 +60,7 @@
       - [18.Vue 的各个生命阶段是什么？](#18vue-的各个生命阶段是什么)
       - [19.箭头函数和普通函数有什么区别？](#19箭头函数和普通函数有什么区别)
   - [经典笔试题](#经典笔试题)
+    - [算法回顾](#算法回顾)
       - [1. js 实现一个函数，完成超过范围的两个大整数相加功能](#1-js-实现一个函数完成超过范围的两个大整数相加功能)
       - [2. js 如何实现数组扁平化？](#2-js-如何实现数组扁平化)
       - [3. js 如何实现数组去重？](#3-js-如何实现数组去重)
@@ -91,6 +92,8 @@
       - [30.Zombie in Matrix](#30zombie-in-matrix)
       - [31. sum柯里化](#31-sum柯里化)
       - [32.Tiktok国际化原题](#32tiktok国际化原题)
+      - [33.用 setTimeout 实现 setInterval](#33用-settimeout-实现-setinterval)
+    - [34. 手写reduce](#34-手写reduce)
 - [常见面试智力题总结](#常见面试智力题总结)
       - [1. 时针与分针夹角度数问题？](#1-时针与分针夹角度数问题)
       - [2. 用3升，5升杯子怎么量出4升水？](#2-用3升5升杯子怎么量出4升水)
@@ -1884,9 +1887,10 @@ Vue 一共有8个生命阶段，分别是创建前、创建后、加载前、加
 
 [算法总结](https://github.com/Toraycaaa/Front-End-Interview-Notebook/blob/master/%E5%88%B7%E9%A2%98%E6%80%BB%E7%BB%93.md)
 
-[手写方法]()
+[手写方法](https://github.com/Toraycaaa/Front-End-Interview-Notebook/blob/master/%E6%89%8B%E5%86%99%E6%96%B9%E6%B3%95.md)
 
 #### 1. js 实现一个函数，完成超过范围的两个大整数相加功能
+
    ```js
    主要思路是通过将数字转换为字符串，然后每个字符串在按位相加。
 
@@ -3355,7 +3359,7 @@ console.log(sum(1,2,3)) // console.log(sum(1)(2,3) === sum(1,2)(3)) //true
 #### 32.Tiktok国际化原题
 
 ```js
-
+// min * max 最短数组
 // // 12 mins
 // function maxSubseq(array){
 //     if(!array.length) return 0
@@ -3389,6 +3393,7 @@ console.log(sum(1,2,3)) // console.log(sum(1)(2,3) === sum(1,2)(3)) //true
     
 // }
 
+最长子序列
 // let a = [3,1,6,4,5,2]
 // let test = maxSubseq(a)
 // console.log(test)
@@ -3410,7 +3415,7 @@ console.log(sum(1,2,3)) // console.log(sum(1)(2,3) === sum(1,2)(3)) //true
 // }
 
 
-
+// delay函数
 // let a = [3,1,6,4,5,2], n = 10
 // console.log(minSubseq(10,a))
 
@@ -3455,6 +3460,53 @@ delay(10000).then(() => console.log('print after ms'))
     }, 5000)
 ```
 
+### 34. 手写reduce
+
+```js
+Array.prototype.myreduce = function (fn, initialValue) {
+  // 判断调用对象是否为数组
+  if (Object.prototype.toString.call([]) !== '[object Array]') {
+    throw new TypeError('not a array')
+  }
+  // 判断调用数组是否为空数组
+  const sourceArray = this
+  if (sourceArray.length === 0) {
+    throw new TypeError('empty array')
+  }
+  // 判断传入的第一个参数是否为函数
+  if (typeof fn !== 'function') {
+    throw new TypeError(`${fn} is not a function`)
+  }
+
+  // 第二步
+  // 回调函数参数初始化
+  let accumulator, 
+  currentValue,
+  currentIndex;
+  if (initialValue) {
+    accumulator = initialValue
+    currentIndex = 0
+  } else {
+    accumulator = arr[0]
+    currentIndex = 1
+  }
+
+  // 第三步
+  // 开始循环
+  while (currentIndex < sourceArray.length) {
+    if (Object.prototype.hasOwnProperty.call(sourceArray, currentIndex)) {
+      currentValue = sourceArray[currentIndex]
+      accumulator = fn(accumulator, currentValue, currentIndex, sourceArray)
+    }
+    
+    currentIndex++
+  }
+
+  // 第四步
+  // 返回结果
+  return accumulator
+}
+```
 
 
 
