--- a/刷题总结.md
+++ b/刷题总结.md
@@ -1,16 +1,6 @@
 ## 刷题总结
 
-- [刷题总结](#刷题总结)
-  - [一. 数组](#一-数组)
-  - [二. 链表](#二-链表)
-  - [**三. 字符串**](#三-字符串)
-  - [**四. 哈希表**](#四-哈希表)
-  - [**五. 栈 和 队列**](#五-栈-和-队列)
-  - [**六. 二叉树**](#六-二叉树)
-  - [**七. 图**](#七-图)
-  - [**八. 双指针**](#八-双指针)
-  - [**九. 二分查找**](#九-二分查找)
-  - [**十. 滑动窗口**](#十-滑动窗口)
+[toc]
 
 ###  一. 数组
 
@@ -29,7 +19,9 @@
 
 ### 二. 链表
 
-**题目**：lc21，lc203 , lc206, lc141, lc86
+**题目**：lc21，lc203 , lc206, lc141, lc86, 
+
+[237. 删除链表中的节点](https://leetcode-cn.com/problems/delete-node-in-a-linked-list/)(easy) (将下一节点值赋给当前节点，将下下一节点地址，赋给下一节点)
 
 **技巧**：
 
@@ -71,13 +63,21 @@
 
 [面试题 10.02. 变位词组（mid，40 mins）](https://leetcode-cn.com/problems/group-anagrams-lcci/)（使用排序后的字符串作为key，索引作为value）
 
+[202. Happy Number](https://leetcode-cn.com/problems/happy-number/)(easy)(可以使用快慢指针降低空间复杂度)
+
+[299. Bulls and Cows](https://leetcode-cn.com/problems/bulls-and-cows/) (Mid)
+
 **思路**
 
 - 也可以用数组作为key， 可以和排序配合使用，查找相同字符组成的的字符串
 
+
+
 ### **五. 栈 和 队列**
 
 **题目：**lc20,  剑指 Offer 09 ,  lc225, lc1047, lc1021, 
+
+[404. Sum of Left Leaves](https://leetcode-cn.com/problems/sum-of-left-leaves/)(easy)
 
 **技巧：**
 
@@ -102,6 +102,8 @@
 ### **六. 二叉树**
 
 **题目：**lc144, lc94, lc145, lc102,  剑指 Offer 55 - I ,
+
+[剑指 Offer 07. 重建二叉树](https://leetcode-cn.com/problems/zhong-jian-er-cha-shu-lcof/) (Mid) (前序遍历找root，再根据中序遍历分开左右子树，递归)
 
 **技巧：**
 
@@ -316,7 +318,7 @@
 
 
 
- 
+
 
 **技巧：**
 
@@ -408,7 +410,7 @@
 
   
 
-### **十一. 贪心算法**
+### 十一. 贪心算法
 
 **题目**
 
@@ -426,6 +428,8 @@
 
 [56. 合并区间](https://leetcode-cn.com/problems/merge-intervals/) （mid）思路：先排序，在画图找规律合并数组 
 
+[55. 跳跃游戏](https://leetcode-cn.com/problems/jump-game/) (mid) 考虑每个位置能覆盖的最大范围
+
 **思路**
 
 - 区间问题肯定按照区间的起点或者终点进行排序 
@@ -438,7 +442,7 @@
 
 
 
-### **十二. 分治法**
+### 十二. 分治法
 
 **题目：**
 
@@ -460,13 +464,83 @@
 
 **题目：**
 
+[136. Single Number](https://leetcode-cn.com/problems/single-number/)(Easy, Hashmap/XOR)
+
+[318. Maximum Product of Word Lengths](https://leetcode-cn.com/problems/maximum-product-of-word-lengths/)(mid, 1 << 2 = 4)
+
 **技巧：**
+
+- 异或 ^, ?<<二进制左移？位（等于×2），& 与， | 或
+
+- 字符串判断是否有重复字符
+
+  ```js
+  function check(a, b){
+          let hashcodeA = 0, hashcodeB = 0
+          for(let i = 0;i<a.length;i++){
+              hashcodeA |= 1 << (a[i].charCodeAt() - 'a'.charCodeAt());
+          }
+          for(let i = 0;i<b.length;i++){
+              hashcodeB |= 1 << (b[i].charCodeAt() - 'a'.charCodeAt());
+          }
+          return !(hashcodeA & hashcodeB)
+      }
+  ```
+
+  
 
 ### 十五. 回溯
 
 **题目：**
 
+[77. Combinations](https://leetcode-cn.com/problems/combinations/) (mid)
+
+[39. Combination Sum](https://leetcode-cn.com/problems/combination-sum/) (mid)
+
+[17. 电话号码的字母组合](https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/)
+
 **技巧：**
+
+-  递归来做层叠嵌套（可以理解是开k层for循环），**每一次的递归中嵌套一个for循环，那么递归就可以用于解决多层嵌套循环的问题了**。 
+
+- **回溯三部曲**
+
+  - 递归函数的返回值以及参数（ 两个全局变量，一个用来存放符合条件单一结果，一个用来存放符合条件结果的集合 ）
+
+  - 回溯函数终止条件
+
+  - 单层搜索的过程（ 可以看出for循环用来横向遍历，递归的过程是纵向遍历。 ）
+
+  - **剪枝优化**
+
+  - ```js
+    // Example: 77
+    // 初始化局部变量和全局变量
+    let res = [], path = [] 
+    nxt(1)
+    // backtracking
+    function nxt(startIndex){
+        //终止条件
+        if(path.length === k){
+            res.push([...path])
+            return 
+        }
+    	//剪枝和递归
+        for(let i = startIndex; i<= n - (k - path.length) + 1;i++){
+            path.push(i)
+            nxt(i+1)
+            path.pop()
+        }
+    }
+    ```
+
+  - 
+
+
+
+
+
+
 
 ### 十六. 动态规划
 
@@ -474,17 +548,80 @@
 
 [413. 等差数列划分](https://leetcode-cn.com/problems/arithmetic-slices/)(mid, 14min)
 
+[264. Ugly Number II](https://leetcode-cn.com/problems/ugly-number-ii/)(mid, 用三个指针当作状态，f(n) = Math.min(f[p2]*2, f[p3]*3, f[p5]*5), 最小值对应的指针++ )
+
+[120. Triangle](https://leetcode-cn.com/problems/triangle/)(mid, 状态是每个到每个点的最小值，f(i, j) = Min(f(i-1, j-1), f(i-1, j))+triangle(i ,j))
+
+[300. Longest Increasing Subsequence](https://leetcode-cn.com/problems/longest-increasing-subsequence/) (mid)
+
+```js
+for(let j = 0; j<i;j++){
+           if(nums[j] < nums[i]){
+                f[i] = Math.max(f[i], f[j]+1)
+           }
+        }
+```
+
+[198. 打家劫舍](https://leetcode-cn.com/problems/house-robber/)(mid)
+
+[213. 打家劫舍 II](https://leetcode-cn.com/problems/house-robber-ii/) (mid, 分成两段，[1,2,3,4] -> [1,2,3] + [2,3,4], 再求两段的最大值)
+
+[337. 打家劫舍 III](https://leetcode-cn.com/problems/house-robber-iii/) (mid, 二叉树动规，可以用map来保存dp状态，key为node，val为dp的状态值)
+
+解析：https://leetcode-cn.com/problems/house-robber-iii/solution/san-chong-fang-fa-jie-jue-shu-xing-dong-tai-gui-hu/
+
+[375. 猜数字大小 II](https://leetcode-cn.com/problems/guess-number-higher-or-lower-ii/) (mid, 二维动规)
+
+[664. 奇怪的打印机](https://leetcode-cn.com/problems/strange-printer/)(mid, 二维动规)
+
+[516. Longest Palindromic Subsequence](https://leetcode-cn.com/problems/longest-palindromic-subsequence/) (mid, 二维动规)
+
 **技巧：**
 
+- 动规特点
+
+  - 分解为多个子问题
+  - 重叠子问题
+  - 状态转移方程
+  - 最优子结构
+
+- 解题思路
+
+  - 确定状态（可以单纯点）
+  - 初始化DP list （可以用备忘录降低空间复杂度）
+  - 明确状态转移方程 （最好写出来）
+  - 递归 或 迭代 （注意迭代方向，一般从大到小）- （自顶向下，自底向上）
+  - 明确终止条件
+
+- 二维DP
+
+  - 确定状态（f(i, j)）
+
+  - 初始化2D DP list ( let dp = new Array(n).fill(0).map(()=>new Array(n).fill(0))   !不能new Array(n).fill(new Array(n))一直相同  ) 
+
+  - 明确状态转移方程 （最好写出来）
+
+    ![1636715127211](刷题总结.assets/1636715127211.png)
+
+  - 递归 或 迭代 （注意迭代方向，一般从大到小）- （自顶向下，自底向上）
+
+  - ```js
+    for(let i = len-1;i>=0;i--)
+            for(let j = i;j<len;j++)
+    // 3,3 -> 2,2 2,3 -> 1,1 1,2 1,3
+    ```
+
+  - 明确终止条件
 
 
-> ### 十七. 其他
+
+
+
+### 十七. 其他
 
 题目：
 
 [1337. 矩阵中战斗力最弱的 K 行](https://leetcode-cn.com/problems/the-k-weakest-rows-in-a-matrix/)（easy）思路：用map记录战斗力element的index数组；进阶思路： 将每一行的士兵数量x1000+索引存到一个新的列表里，然后对这个列表进行排序，取前面的k位对1000取余即是需要的索引值。
-
-
 
 ```js
 var m;
@@ -537,4 +674,8 @@ while(sc = read_line()){
     }
 }
 ```
+
+- - 
+
+
 
