--- a/算法/算法.md
+++ b/算法/算法.md
@@ -75,7 +75,7 @@
       - [12. 如何查找一篇英文文章中出现频率最高的单词？](#12-如何查找一篇英文文章中出现频率最高的单词)
       - [13. 发布订阅模式和手写](#13-发布订阅模式和手写)
       - [14. 节流与防抖](#14-节流与防抖)
-      - [15.字符串数组转数组](#15字符串数组转数组)
+      - [15.字符串数组转数组](#15字符串数组转数组（Shopee面经原题）)
       - [16.深拷贝与浅拷贝](#16深拷贝与浅拷贝)
       - [17.手写 call、apply 及 bind 函数](#17手写-callapply-及-bind-函数)
       - [18.函数柯里化的实现](#18函数柯里化的实现)
@@ -89,11 +89,17 @@
       - [26.斐波那契数列多种解法(shopee面经原题)](#26斐波那契数列多种解法shopee面经原题)
       - [28.手写reduce](#28手写reduce)
       - [29.根据二维数组构造二叉树，并求它的最长路径和宽度](#29根据二维数组构造二叉树并求它的最长路径和宽度)
-      - [30.Zombie in Matrix](#30zombie-in-matrix)
+      - [30.Zombie in Matrix](#30zombie-in-matrix（Shopee面经原题）)
       - [31. sum柯里化](#31-sum柯里化)
-      - [32.Tiktok国际化原题](#32tiktok国际化原题)
+      - [32.Tiktok国际化原题-最长子序列](#32tiktok国际化原题)
       - [33.用 setTimeout 实现 setInterval](#33用-settimeout-实现-setinterval)
-    - [34. 手写reduce](#34-手写reduce)
+      - [34. 手写reduce](#34-手写reduce)
+      - [35. Reduce实现map](#35. Reduce实现map)
+      - [36.手写Compose和pipe函数（Shopee面试原题）](#36.手写Compose和pipe函数（Shopee面试原题）)
+      - [37.添加千分位（Shopee面试原题）](#37.添加千分位（Shopee面试原题）)
+      - [38. merge函数（merge数据同时并且去重，Shopee面试原题）](#38. merge函数（merge数据同时并且去重，Shopee面试原题）)
+      - [39. 多叉树问题（Shopee面试原题）](#39. 多叉树问题（Shopee面试原题）)
+      - [40. 手写对象equal函数(Shopee面试原题)](#40. 手写对象equal函数(Shopee面试原题))
 - [常见面试智力题总结](#常见面试智力题总结)
       - [1. 时针与分针夹角度数问题？](#1-时针与分针夹角度数问题)
       - [2. 用3升，5升杯子怎么量出4升水？](#2-用3升5升杯子怎么量出4升水)
@@ -1608,7 +1614,7 @@ rotate()方法，在一个给定度数顺时针旋转的元素。负值是允许
 scale()方法，该元素增加或减少的大小，取决于宽度（X轴）和高度（Y轴）的参数
 
 #### 6.Http和Https区别
-HTTP 是超文本传输协议，它定义了客户端和服务器之间交换报文的格式和方式，默认使用 80 端口。它使用 TCP 作为传 输层协议，保证了数据传输的可靠性。
+HTTP 是超文本传输协议，它定义了客户端和服务器之间交换报文的格式和方式，默认使用 80 端口。它使用 TCP 作为传输层协议，保证了数据传输的可靠性。
 
 HTTP 是一个无状态的协议，HTTP 服务器不会保存关于客户的任何信息。
 
@@ -1929,11 +1935,8 @@ Vue 一共有8个生命阶段，分别是创建前、创建后、加载前、加
    ```js
    // 这一种方法通过递归来实现，当元素为数组时递归调用，兼容性好
    function flattenArray(array) {
-
      if (!Array.isArray(array)) return;
-
      let result = [];
-
      result = array.reduce(function (pre, item) {
        // 判断元素是否为数组，如果为数组则递归调用，如果不是则加入结果数组中
        return pre.concat(Array.isArray(item) ? flattenArray(item) : item);
@@ -2241,8 +2244,63 @@ function debounce(fn, wait) {
     }, wait);
   };
 }
+// 防抖加强
+// 立即执行版就是触发事件后函数会立即执行，然后n秒内不触发事件才会继续执行函数的效果
+    function debounce(func, wait) {
+        let timeout;
+        return function () {
+            let ctx = this;
+            let args = arguments;
+            
+            if (timeout) clearTimeout(timeout);
+            let callNow = !timeout;
+            timeout = setTimeout(() => {
+                timeout = null;
+            }, wait)
+            
+            if (callNow) func.apply(ctx, args);
+        }
+    }
+
+// 最终版：除了支持 this 和 event 外，还支持以下功能：
+// - 支持立即执行；
+// - 函数可能有返回值；
+// - 支持取消功能
+function debounce(func, wait, immediate) {
+    var timeout, result;
+    
+    var debounced = function () {
+        var context = this;
+        var args = arguments;
+        
+        if (timeout) clearTimeout(timeout);
+        if (immediate) {
+            // 如果已经执行过，不再执行
+            var callNow = !timeout;
+            timeout = setTimeout(function(){
+                timeout = null;
+            }, wait)
+            if (callNow) result = func.apply(context, args)
+        } else {
+            timeout = setTimeout(function(){
+                func.apply(context, args)
+            }, wait);
+        }
+        return result;
+    };
+
+    debounced.cancel = function() {
+        clearTimeout(timeout);
+        timeout = null;
+    };
+
+    return debounced;
+}
+
+
 // 函数节流： 规定一个单位时间，在这个单位时间内，只能有一次触发事件的回调函数执行，如果在同一个单位时间内某事件被触发多次，只有一次能生效。
 // 函数节流的实现;
+// 时间戳版
 function throttle(fn, delay) {
   var preTime = Date.now();
 
@@ -2258,41 +2316,20 @@ function throttle(fn, delay) {
     }
   };
 }
-
-
-// 例子
-<input> </input>
-let inp = document.querySelector("input")
-inp.oninput = debounce(function(){console.log(this)},2000)
-function debounce(fn, delay){
-    let t = null;
-    return function(){
-        if(t!==null){
-            clearTimeout(t)
-        }
-        t = setTimeout(()=>{
-              fn.call(this)
-          }, delay)
+// 定时器版
+function throttle(func, wait) {
+    let timeout;
+    return function() {
+      let context = this;
+      let args = arguments;
+      if (!timeout) {
+        timeout = setTimeout(() => {
+          timeout = null;
+          func.apply(context, args)
+        }, wait)
+      }
     }
 }
-// 节流
-<style>body{height:200vh}</style>
-<script> 
-window.onscroll = throttle(()=>{console.log("hello")}, 500)
-function throttle(fn, delay){
-  let flag = true
-  return function(){
-    if(flag){
-      setTimeout(()=>{
-        fn.call(this)
-        flag = true
-      },delay)
-    }
-    flag = false
-  }
-}
-
-</script>
 
 // 节流加强lead
 function throttle(fn,delay,lead){
@@ -2320,10 +2357,81 @@ function throttle(fn,delay,lead){
         }
     }
 }
+//最终版：支持取消节流；另外通过传入第三个参数，options.leading 来表示是否可以立即执行一次，opitons.trailing 表示结束调用的时候是否还要执行一次，默认都是 true。 注意设置的时候不能同时将 leading 或 trailing 设置为 false。
+function throttle(func, wait, options) {
+    var timeout, context, args, result;
+    var previous = 0;
+    if (!options) options = {};
 
+    var later = function() {
+        previous = options.leading === false ? 0 : new Date().getTime();
+        timeout = null;
+        func.apply(context, args);
+        if (!timeout) context = args = null;
+    };
 
+    var throttled = function() {
+        var now = new Date().getTime();
+        if (!previous && options.leading === false) previous = now;
+        var remaining = wait - (now - previous);
+        context = this;
+        args = arguments;
+        if (remaining <= 0 || remaining > wait) {
+            if (timeout) {
+                clearTimeout(timeout);
+                timeout = null;
+            }
+            previous = now;
+            func.apply(context, args);
+            if (!timeout) context = args = null;
+        } else if (!timeout && options.trailing !== false) {
+            timeout = setTimeout(later, remaining);
+        }
+    };
+    
+    throttled.cancel = function() {
+        clearTimeout(timeout);
+        previous = 0;
+        timeout = null;
+    }
+    return throttled;
+}
+
+// 防抖例子
+<input>
+let inp = document.querySelector("input")
+inp.oninput = debounce(function(){console.log(this)},2000)
+function debounce(fn, delay){
+    let t = null;
+    return function(){
+        if(t!==null){
+            clearTimeout(t)
+        }
+        t = setTimeout(()=>{
+              fn.call(this)
+          }, delay)
+    }
+}
+// 节流例子
+<style>body{height:200vh}</style>
+<script> 
+window.onscroll = throttle(()=>{console.log("hello")}, 500)
+function throttle(fn, delay){
+  let flag = true
+  return function(){
+    if(flag){
+      setTimeout(()=>{
+        fn.call(this)
+        flag = true
+      },delay)
+    }
+    flag = false
+  }
+}
+
+</script>
 ```
-#### 15.字符串数组转数组
+#### 15.字符串数组转数组（Shopee面经原题）
 
 ```js
 // 测试集
@@ -2332,7 +2440,7 @@ let b = "[[[]],[]]"
 let c = '[123,[2],3,[4,5],6]'
 
 // 一维
-const convert_1 = function(s){
+const trans = function(s){
     let result = [], temp = ""
 
     for(let i=0;i<s.length;i++){
@@ -2354,7 +2462,6 @@ const convert_1 = function(s){
     }
     return result
 }
-
 // 多维 - 栈
 const convert_n = function(s){
     let result =[], temp = "", status = 0
@@ -2395,8 +2502,8 @@ const convert_n = function(s){
     }
     return result
 }
-// 多维 - 双指针
-const convert_n1 = function(s){
+// 双指针
+const convert_n = function(s){
     let result =[], temp = ""
     for(let i=0;i<s.length;i++){
         let ele = s[i]
@@ -2531,52 +2638,39 @@ Function.prototype.myCall = function(context) {
   if (typeof this !== "function") {
     console.error("type error");
   }
-
   // 获取参数
   let args = [...arguments].slice(1),
-    result = null;
-
+      result = null;
   // 判断 context 是否传入，如果未传入则设置为 window
   context = context || window;
-
   // 将调用函数设为对象的方法
   context.fn = this;
-
   // 调用函数
   result = context.fn(...args);
-
   // 将属性删除
   delete context.fn;
-
   return result;
 };
 
 // apply 函数实现
-
 Function.prototype.myApply = function(context) {
   // 判断调用对象是否为函数
   if (typeof this !== "function") {
     throw new TypeError("Error");
   }
-
   let result = null;
-
   // 判断 context 是否存在，如果未传入则为 window
   context = context || window;
-
   // 将函数设为对象的方法
   context.fn = this;
-
   // 调用方法
   if (arguments[1]) {
     result = context.fn(...arguments[1]);
   } else {
     result = context.fn();
   }
-
   // 将属性删除
   delete context.fn;
-
   return result;
 };
 
@@ -2586,11 +2680,9 @@ Function.prototype.myBind = function(context) {
   if (typeof this !== "function") {
     throw new TypeError("Error");
   }
-
   // 获取参数
   var args = [...arguments].slice(1),
     fn = this;
-
   return function Fn() {
     // 根据调用方式，传入不同绑定值
     return fn.apply(
@@ -2698,6 +2790,10 @@ for (let i = 0; i < 5; i++) {
 ```
 #### 21.new 的实现
 ```js
+// （1）首先创建了一个新的空对象
+// （2）设置原型，将对象的原型设置为函数的 prototype 对象。
+// （3）让函数的 this 指向这个对象，执行构造函数的代码（为这个新对象添加属性）
+// （4）判断函数的返回值类型，如果是值类型，返回创建的对象。如果是引用类型，就返回这个引用类型的对象。
 function create (ctr) {
     // 创建一个空对象
     let obj = new Object()
@@ -2710,6 +2806,13 @@ function create (ctr) {
     // 确保返回的是对象
     return typeof result === 'object'? result : obj;
 }
+//使用
+function person(name, age) {
+    this.name = name
+    this.age = age
+}
+let p = create(person, '布兰', 12)
+console.log(p)  // { name: '布兰', age: 12 }
 
 ```
 #### 22.instanceof 的原理
@@ -2978,6 +3081,35 @@ function compress(s){
 样例g: 221 -> ((22)1)
 
 ```js
+// 解法1
+function addParenthesis(str){
+    let len = str.length
+    if(!len) return new Error("empty string")
+    let res = [], top = 0
+    str = str + "0"
+    for(let i in str){
+        let diff = str[i] - top
+        if(diff > 0){          
+            for(let j = 1;j<=diff;j++){
+                res.push("(")
+            }
+            res.push(str[i])
+            top = str[i]
+        }else if(diff < 0){
+            diff = -diff
+            for(let j = 1;j<=diff;j++){
+                res.push(")")
+            }
+            res.push(str[i])
+            top = str[i]
+        }else{
+            res.push(str[i])
+        }
+    }
+    res.pop()
+    return res.join("")
+}
+// 解法2
 function addParenthese(s){
     let len = s.length
     if(!len){
@@ -3218,7 +3350,7 @@ const sourceData = [
     console.log(getDimension(sourceData)) //[4,5]
 ```
 
-#### 30.Zombie in Matrix
+#### 30.Zombie in Matrix（Shopee面经原题）
 
 ```
 Zombie Game
@@ -3255,63 +3387,79 @@ Return 0, the starting state is all ppl got infected
 // 3. 计算感染的步数并开始感染
 // 4. 如果僵尸紧邻的位置有人，则将其感染为僵尸并入队 
 // 5. 如果有新被感染的人，说明需要感染的次数需要 + 1
-// 6. 如果pCount等于0，说明所有人都被感染了，返回step；否则返回-1
+// 6. 如果count等于0，说明所有人都被感染了，返回step；否则返回-1
 
-class GridType:
-    WALL = 2
-    ZOMBIE = 1
-    HUMAN = 0
+let Map = {
+    DEVELOPER: 2,
+    PM: 1,
+    EMPTY: 0,
+}
 
-DIRECTIONS = [(0, 1), (1, 0), (0, -1), (-1, 0)]
+let DIRECTIONS = [[0,1], [1,0], [0,-1], [-1,0]]
 
-class Solution:
-    """
-    @param grid: a 2D integer grid
-    @return: an integer
-    """
-    def zombie(self, grid):
-        if not grid or not grid[0]:
-            return 0
-        
-        queue = collections.deque([])
-        visited = set()
+function turn2Coder(array) {
+    if (!array || !array[0]) return 0
+    let queue = [] // 保存可被传染的位置
+    let visited = new Set() // 已经经过的位置
+    let count = 0 // 是否所有人都被感染
+    for (let i in array) {
+        for (let j in array[i]) {
+            if (array[i][j] === Map.DEVELOPER) {
+                queue.push([i, j])
+                visited.add([i, j])
+            }
+            if (array[i][j] === Map.PM) {
+                count++
+            }
+        }
+    }
+    let day = 0
+    while (queue.length) {
+        day++
+        let tempQueue = [...queue]
+        for (let i in queue) {
+            let [x, y] = queue[i]
+            tempQueue.shift()
+            for (let j in DIRECTIONS) {
+                let [dx, dy] = DIRECTIONS[j]
+                let adj_x = parseInt(dx) + parseInt(x)
+                let adj_y = parseInt(dy) + parseInt(y)
+                if (!isVaild(adj_x, adj_y)) {
+                    continue
+                }
+                if (visited.has([adj_x, adj_y])) {
+                    continue
+                }
+                if (array[adj_x][adj_y] === Map.PM) {
+                    array[adj_x][adj_y] = 2
+                    count--
+                    tempQueue.push([adj_x, adj_y])
+                    visited.add([adj_x, adj_y])
+                }
+            }
+        }
+        queue = [...tempQueue]
+    }
+    x
+    if (count !== 0) {
+        return -1
+    } else {
+        return day - 1
+    }
 
-        human = 0
-        for i in range(len(grid)):
-            for j in range(len(grid[0])):
-                if grid[i][j] == GridType.ZOMBIE:
-                    queue.append((i, j))
-                    visited.add((i, j))
-                if grid[i][j] == GridType.HUMAN:
-                    human += 1
-        
-        day = 0
-        while queue:
-            day += 1
-            for _ in range(len(queue)):
-                x, y = queue.popleft()
-                for dx, dy in DIRECTIONS:
-                    adj_x, adj_y = x + dx, y + dy
-                    if not self.is_valid(adj_x, adj_y, grid):
-                        continue
-                    if (adj_x, adj_y) in visited:
-                        continue
-                    if grid[adj_x][adj_y] == GridType.HUMAN:
-                        grid[adj_x][adj_y] = 1
-                        human -= 1
-                        queue.append((adj_x, adj_y))
-                        visited.add((adj_x, adj_y))
-        
-        if human != 0:
-            return -1 
-        return day - 1 
+    function isVaild(x, y) {
+        if (!((x >= 0 && x < array.length) && (y >= 0 && y < array[0].length))) {
+            return false
+        }
+        if (array[x][y] === Map.EMPTY) {
+            return false
+        }
+        return true
+    }
+}
 
-    def is_valid(self, x, y, grid):
-        if not (0 <= x < len(grid) and 0 <= y < len(grid[0])):
-            return False
-        if grid[x][y] == GridType.WALL:
-            return False 
-        return True 
+console.log(turn2Coder([[0,2],[1,0]])); // -1
+console.log(turn2Coder([[2,1,1],[1,1,0],[0,1,1]])); // 4
 ```
 
 
@@ -3460,7 +3608,7 @@ delay(10000).then(() => console.log('print after ms'))
     }, 5000)
 ```
 
-### 34. 手写reduce
+#### 34. 手写reduce
 
 ```js
 Array.prototype.myreduce = function (fn, initialValue) {
@@ -3507,6 +3655,295 @@ Array.prototype.myreduce = function (fn, initialValue) {
   return accumulator
 }
 ```
+
+#### 35. Reduce实现map
+
+```js
+Array.prototype.myMap = function(fn, thisarg){
+    const result = []
+    const arr = this
+    arr.reduce((pre,cur,i,arr)=>{
+    result.push(fn.call(this, cur, i, arr))
+    },[])
+    return result
+}
+
+let a = [1,2,3,5]
+let b = a.myMap((item)=>{
+if(item > 2) return item
+})
+console.log(b)
+
+```
+
+#### 36.手写Compose和pipe函数（Shopee面试原题）
+
+ `compose`和`pipe`就是执行一系列的任务（函数）  `compose函数`可以将`需要嵌套执行`的`函数平铺`，`嵌套执行`就是`一个函数的返回值`将`作为另一个函数的参数`。 
+
+- 第一个函数是多元的（接受多个参数），后面的函数都是单元的（接受一个参数）
+- 执行顺序的自右向左的
+- 所有函数的执行都是同步的（异步的后面文章会讲到）
+
+`pipe` 函数与 `compose`函数的共同点是都返回“组合函数”，区别则是执行的顺序不同，前者是从左向右执行，后者则是从右向左执行。 实现 `pipe`函数非常简单，只需要对 `compose` 函数的包裹顺序进行调整一下即可。 
+
+```js
+// compose
+//用例
+function a(a) {
+    console.log(a);
+    return a + "a";
+}
+function b(b) {
+    console.log(b);
+    return b + "b";
+}
+function c(c) {
+    console.log(c);
+    return c + "c";
+}
+var funs = [a, b, c];
+
+// ES6 方式
+function compose(...funcs) {
+  if (funcs.length === 0) {
+    return arg => arg
+  }
+  if (funcs.length === 1) {
+    return funcs[0]
+  }
+  return funcs.reduce((a, b) => (...args) => a(b(...args)))
+}
+// 简化
+const compose = function(){
+    // 将接收的参数存到一个数组， args == [multiply, add]
+    const args = [].slice.apply(arguments);// arguments 是个类数组没有reduce方法，也可以用Array.from(arrayLike);
+    return function(x) {
+      return args.reduceRight((res, cb) => cb(res), x);
+    }
+ };
+
+// 测试
+let calc1 = compose(a, b, c);
+let res = calc1(1);
+console.log(res);  
+
+
+//pipe
+const pipe = function(){
+    let args = [].slice.apply(arguments);
+    return function(x){
+        let middleFn = (res,cb) => cb(res)
+        return args.reduce(middleFn, x);
+    }
+};
+```
+
+#### 37.添加千分位（Shopee面试原题）
+
+```js
+// 方法一
+function format(number) {
+    // (?!^) 不是开头， + 多次匹配, \. 结尾
+  return number && number.replace(/(?!^)(?=(\d{3})+\.)/g, ",");
+}
+// 方法二
+function format1(number) {
+  // Internationalization 对象是 ECMAScript 国际化 API 的一个命名空间，它提供了精确的字符串对比、数字格式化，和日期时间格式化
+  return Intl.NumberFormat().format(number)
+}
+// 方法三
+function format2(number) {
+  return number.toLocaleString('en')
+}
+// 手写
+function format3(num){
+    let str = num.toString().split(".")
+    let len = str[0].length
+    let temp = ''
+    let count = 0
+    let array = []
+    for(let i = len-1;i>=0;i--){
+        temp = str[0][i] + temp
+        count++
+        if(count===3){
+            count = 0
+            array.unshift(temp)
+            temp = ''
+        }
+    }
+    if(temp.length !== 0){
+        array.unshift(temp)
+    }  
+    let res = array.join(",")
+    let postfix =  str[1]? "."+str[1]:''
+    return res + postfix
+}
+```
+
+#### 38. merge函数（merge数据同时并且去重，Shopee面试原题）
+
+```js
+console.log(merge([1,2,3], [2,3], [4,5,3])); // [1,2,3,4,5]
+这里补充下 a,b,c,d,e 是对象。
+a = {a: 1}, b = {b:1} , c = {c:2}, d = a,  e = {a: 1},
+console.log(merge([a,c], [b, c], [c, d, e])); // [{a: 1}, {c: 2}, {b: 1}, {a: 1}]
+
+function merge(...array){
+    let set = new Set()
+    let res = []
+
+    for(let i in array){
+        let ele = array[i]
+        for(let j in ele){
+            set.add(ele[j])
+        }
+    }
+    res = Array.from(set)
+    return res 
+}
+```
+
+#### 39. 多叉树问题（Shopee面试原题）
+
+```js
+const sourceData = [
+    ['bag', 'purse'],
+    ['purse', 'hand purse'],
+    ['bag', 'backpack'],
+    ['purse', 'bag'],
+    ['purse wallet', 'coin wallet'],
+    ['purse wallet', 'man purse'],
+    ['shoe', 'nike shoe'],
+];
+
+
+class TreeNode {
+    constructor(val) {
+        this.val = val
+        this.children = []
+    }
+
+}
+
+const map = {}
+for (let i of sourceData) {
+    if (map[i[0]]) {
+        map[i[0]].push(i[1])
+    } else {
+        map[i[0]] = [i[1]]
+    }
+}
+
+const buildTree = function (node) {
+    if (map[node.val]) {
+        let array = map[node.val]
+        delete(map[node.val])
+        array.forEach((value) => {
+            node.children.push(new TreeNode(value))
+        })
+        for (let i in node.children) {
+            buildTree(node.children[i])
+        }
+    }
+}
+
+
+let test_1 = ['bag', 'purse wallet']
+// 给父子子节点判断是否联通
+let pass = []
+const getPath = function (root,path,mark,test) {
+    // console.log(root.val)
+    if (root.val === test[0]) {
+        mark = true
+    }   
+    if(mark === true){
+        path.push(root.val)
+    }
+    if(root.val === test[1]) {
+        // console.log("inner:" + path)
+        pass.push(...path)
+        mark = false
+        
+    }
+
+    if (root.children.length > 0) {
+        for (let i in root.children) {
+            getPath(root.children[i],path,mark,test)
+        }
+    }else{
+        mark = false
+        path.pop()
+    }
+}
+
+let checkCircle = false
+const circle = function (root,visited){
+    if(visited[root.val]){
+        checkCircle = true
+    }else{
+        visited[root.val] = 1
+    }
+    if (root.children.length > 0) {
+        for (let i in root.children) {
+            circle(root.children[i],visited)
+        }
+    }
+}
+
+while (Object.keys(map).length != 0) {
+    // console.log(map)
+    let keys = [...Object.keys(map)]
+    const root = new TreeNode(keys[0])
+    buildTree(root)
+    // 判断连通路线（回溯)
+    // getPath(root, [], false, test_1) 
+
+    // 是否有环
+    circle(root,{})
+}
+
+console.log(pass)
+console.log(checkCircle)
+```
+
+#### 40. 手写对象equal函数(Shopee面试原题)
+
+```js
+var test1 = {a: {a: test1}}
+var test2 = {a: {a: test2}}
+const test3 = {a: 1, b:[2]}
+const test4 = {a: 1, b:[2]}
+const test5 = {a: undefined, b:[2], c: add}
+const test6 = {a: undefined, b:[2], c: add}
+var add = {name:11111}
+
+console.log(equal(test3, test4))
+
+function equal(obj1, obj2) {
+    if(Object.keys(obj1).length !== Object.keys(obj2).length){return false}
+    let obj1Keys = Object.keys(obj1)
+    for(let i of obj1Keys){
+            if(obj2[i]){
+                //console.log(typeof obj2[i])
+                if(typeof obj2[i] !== "object"){
+                    if(obj2[i] !== obj1[i]){
+                        return false
+                    }
+                }else{
+                    let res = equal(obj2[i], obj1[i])
+                    if(!res){
+                        return false
+                    }
+                }
+            }else{
+                return false
+            }    
+    }
+    return true
+}
+```
+
+
 
 
 
