--- a/面试记录/面试记录2022.md
+++ b/面试记录/面试记录2022.md
@@ -218,7 +218,7 @@
   }, 0)
   setTimeout(function () {
       console.log(4)
-  }, 100) // 进阶：改为101呢？
+  }, 100) // 进阶：改为101呢？ 52341
   console.log(5)
   
   // 5, 2, 3, 4, 1
@@ -246,6 +246,62 @@
   ```
 
   
+
+### 字节 懂车帝三面 交叉面 8.18 20:00-21:15
+
+```js
+访问 toutiao.com 的过程
+
+实现一个 jsonp 请求方法
+
+[1,2,3].map(parseInt)
+
+
+setTimout promisify化
+将setTimeout封装成promise名为delay，调用形式如下
+delay(ms).then(() => console.log('print after ms'))
+
+实现 delay
+
+await delay(10);
+console.log('xxxx');
+
+基于 reduce 实现 map
+```
+
+```js
+// function jsonp(url, callback){
+//     let scriptNode= document.createElement("script")
+//     scriptNode.src = url
+//     let callbackName = Math.random()
+//     window[callbackName] = function(){
+//         callback(...arguments)
+//         document.getElementByTagName("head")[0].removeChild(scriptNode)
+//     }
+//     document.getElementByTagName("head")[0].appendChild(scriptNode)
+    
+// }
+
+// function delay(delayTimer){
+//     return new Promise((res,rej)=>{
+//             setTimeout(res,delayTimer)
+//      }
+//    )
+// }
+
+function newMap(fn){
+    const result = []
+    const arr = this
+    arr.reduce(
+        (pre, cur, index, arr)=>{
+            result.push(fn.call(this, cur, index, arr))
+        }, []
+    )
+    return result
+}
+```
+
+
 
 ### 猿辅导一面 8.03 1h
 
@@ -553,3 +609,79 @@
 - 为啥学前端
 - 等等
 - 基本都是唠嗑，没啥技术问题
+
+
+
+### shopee 一面
+
+- 继承，new函数，instanceof函数
+
+```js
+function T1() {
+    this.name = 't1';
+    this.age = 19;
+}
+function T2() {
+    this.name = 't2';
+    this.age = 19;
+    return 19;
+}
+function T3() {
+    this.name = 't3';
+    this.age = 19;
+    return {
+        name: 't',
+        age: 20
+    };
+}
+function T4() {
+    this.name = 't4';
+    this.age = 19;
+}
+console.log(new T1()); //  { name: 't1', age: 19 }
+console.log(new T2()); // { name: 't2', age: 19 }
+console.log(new T3()); //  { name: 't', age: 20 }
+
+T4.prototype = new T1();
+T4.prototype.type = 'expert';
+
+const t4 = new T4();
+console.log(t4); //  { name: 't4', age: 19 }
+console.log(t4.type); // 'expert'
+console.log(t4 instanceof T1); // true
+console.log(t4 instanceof T2); // false
+console.log(t4 instanceof T3); // false
+console.log(t4 instanceof T4); // true
+```
+
+- 事件队列
+
+```js
+console.log('a');
+setTimeout(() => {
+   console.log('b');
+}, 0);
+console.log('c');
+new Promise((resolve) => {
+   console.log('d');
+   resolve(2);
+}).then(() => {
+   console.log('e');
+   setTimeout(() => {
+     console.log('f')
+   }, 100)
+});
+console.log('g');
+//  
+```
+
+-  原型链的理解，new关键字干了什么，实现。以及事件队列
+
+  介绍https和http的区别 
+  4.CA证书的颁发机制，怎么验证证书的可靠性 
+  5.数组在内存中的存储原理？假如内存中有一段被其他东西占用了，还能存进去吗 
+  6.tcp和udp的区别 
+  7.TCP如何保证可靠性 
+  8.收到了104的ack，103没收到，需要重发吗 
+
+- 红绿灯
